refactor thumbnail to its own class

--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
           </a>
         </div>
       </nav>
-      <main></main>
+      <main class="fixed bottom-0 w-screen h-max py-8 text-white grid place-items-center">
+        <div class="flex gap-2">
+          <h1>
+            01
+          </h1>
+          <div>
+            ─ 
+          </div>
+           <h1>
+            08
+          </h1>   
+        </div>
+      </main>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/runGL.ts"></script>
   </body>
 </html>
