--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/global.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,1,300,2,600,400,700&display=swap" rel="stylesheet">   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
-  <body>
+  <body class ="font-sans">
     <canvas id="gl"></canvas> 
     <div id="app">
     </div>
-    <nav class="fixed top-0 w-screen h-max py-8 text-white grid place-items-center z-50">
+    <nav class="fixed font-medium top-0 w-screen h-max py-8 text-white grid place-items-center z-50">
       <div class="flex gap-8">
         <a href="/">
           Works
